src/main/java/compiler/gen/.antlr/javaMinusMinus2Parser.java
// Generated from e:/CD/Project/CompilerProject/src/main/java/compiler/gen/javaMinusMinus2.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class javaMinusMinus2Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, AND=34, OR=35, LT=36, LE=37, GT=38, GE=39, EQEQ=40, 
		NEQ=41, PLUS=42, MINUS=43, TIMES=44, DIV=45, MOD=46, POWER=47, NOT=48, 
		LSB=49, RSB=50, DOTLENGTH=51, LP=52, RP=53, RETURN=54, EQ=55, BooleanLiteral=56, 
		NullLiteral=57, StringLiteral=58, CharLiteral=59, Identifier=60, IntegerLiteral=61, 
		WS=62, MULTILINE_COMMENT=63, LINE_COMMENT=64;
	public static final int
		RULE_program = 0, RULE_importDecl = 1, RULE_mainClass = 2, RULE_classDecl = 3, 
		RULE_interfaceDecl = 4, RULE_interfaceMethodDecl = 5, RULE_interfaceFieldDecl = 6, 
		RULE_fieldDecl = 7, RULE_localDecl = 8, RULE_varDecl = 9, RULE_methodDecl = 10, 
		RULE_ctorDecl = 11, RULE_abstractMethodDecl = 12, RULE_parameterList = 13, 
		RULE_parameter = 14, RULE_methodBody = 15, RULE_type = 16, RULE_javaType = 17, 
		RULE_accessModifier = 18, RULE_statement = 19, RULE_forStmt = 20, RULE_forInit = 21, 
		RULE_forUpdate = 22, RULE_localDeclNoSemi = 23, RULE_printStmt = 24, RULE_exprStmt = 25, 
		RULE_assignment = 26, RULE_designator = 27, RULE_primaryDesignator = 28, 
		RULE_designatorPrime = 29, RULE_expressionOrString = 30, RULE_expression = 31, 
		RULE_expressionPrime = 32, RULE_primaryExpression = 33;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "importDecl", "mainClass", "classDecl", "interfaceDecl", "interfaceMethodDecl", 
			"interfaceFieldDecl", "fieldDecl", "localDecl", "varDecl", "methodDecl", 
			"ctorDecl", "abstractMethodDecl", "parameterList", "parameter", "methodBody", 
			"type", "javaType", "accessModifier", "statement", "forStmt", "forInit", 
			"forUpdate", "localDeclNoSemi", "printStmt", "exprStmt", "assignment", 
			"designator", "primaryDesignator", "designatorPrime", "expressionOrString", 
			"expression", "expressionPrime", "primaryExpression"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'import'", "'.'", "';'", "'class'", "'{'", "'public'", "'static'", 
			"'void'", "'main'", "'String'", "'}'", "'abstract'", "'extends'", "'implements'", 
			"','", "'interface'", "'@Override'", "'boolean'", "'int'", "'char'", 
			"'private'", "'protected'", "'internal'", "'if'", "'else'", "'while'", 
			"'read'", "'break'", "'continue'", "'for'", "'print'", "'new'", "'this'", 
			"'&&'", "'||'", "'<'", "'<='", "'>'", "'>='", "'=='", "'!='", "'+'", 
			"'-'", "'*'", "'/'", "'%'", "'**'", "'!'", "'['", "']'", "'.length'", 
			"'('", "')'", "'return'", "'='", null, "'null'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, "AND", "OR", 
			"LT", "LE", "GT", "GE", "EQEQ", "NEQ", "PLUS", "MINUS", "TIMES", "DIV", 
			"MOD", "POWER", "NOT", "LSB", "RSB", "DOTLENGTH", "LP", "RP", "RETURN", 
			"EQ", "BooleanLiteral", "NullLiteral", "StringLiteral", "CharLiteral", 
			"Identifier", "IntegerLiteral", "WS", "MULTILINE_COMMENT", "LINE_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "javaMinusMinus2.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public javaMinusMinus2Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public MainClassContext mainClass() {
			return getRuleContext(MainClassContext.class,0);
		}
		public TerminalNode EOF() { return getToken(javaMinusMinus2Parser.EOF, 0); }
		public List<ImportDeclContext> importDecl() {
			return getRuleContexts(ImportDeclContext.class);
		}
		public ImportDeclContext importDecl(int i) {
			return getRuleContext(ImportDeclContext.class,i);
		}
		public List<ClassDeclContext> classDecl() {
			return getRuleContexts(ClassDeclContext.class);
		}
		public ClassDeclContext classDecl(int i) {
			return getRuleContext(ClassDeclContext.class,i);
		}
		public List<InterfaceDeclContext> interfaceDecl() {
			return getRuleContexts(InterfaceDeclContext.class);
		}
		public InterfaceDeclContext interfaceDecl(int i) {
			return getRuleContext(InterfaceDeclContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof javaMinusMinus2Listener ) ((javaMinusMinus2Listener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof javaMinusMinus2Listener ) ((javaMinusMinus2Listener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(68);
				importDecl();
				}
				}
				setState(73);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(74);
			mainClass();
			setState(78);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__3 || _la==T__11) {
				{
				{
				setState(75);
				classDecl();
				}
				}
				setState(80);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(84);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__15) {
				{
				{
				setState(81);
				interfaceDecl();
				}
				}
				setState(86);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(87);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportDeclContext extends ParserRuleContext {
		public List<TerminalNode> Identifier() { return getTokens(javaMinusMinus2Parser.Identifier); }
		public TerminalNode Identifier(int i) {
			return getToken(javaMinusMinus2Parser.Identifier, i);
		}
		public TerminalNode TIMES() { return getToken(javaMinusMinus2Parser.TIMES, 0); }
		public ImportDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof javaMinusMinus2Listener ) ((javaMinusMinus2Listener)listener).enterImportDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof javaMinusMinus2Listener ) ((javaMinusMinus2Listener)listener).exitImportDecl(this);
		}
	}

	public final ImportDeclContext importDecl() throws RecognitionException {
		ImportDeclContext _localctx = new ImportDeclContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_importDecl);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			match(T__0);
			setState(90);
			match(Identifier);
			setState(95);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(91);
					match(T__1);
					setState(92);
					match(Identifier);
					}
					} 
				}
				setState(97);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			setState(100);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__1) {
				{
				setState(98);
				match(T__1);
				setState(99);
				match(TIMES);
				}
			}

			setState(102);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MainClassContext extends ParserRuleContext {
		public List<TerminalNode> Identifier() { return getTokens(javaMinusMinus2Parser.Identifier); }
		public TerminalNode Identifier(int i) {
			return getToken(javaMinusMinus2Parser.Identifier, i);
		}
		public TerminalNode LP() { return getToken(javaMinusMinus2Parser.LP, 0); }
		public TerminalNode LSB() { return getToken(javaMinusMinus2Parser.LSB, 0); }
		public TerminalNode RSB() { return getToken(javaMinusMinus2Parser.RSB, 0); }
		public TerminalNode RP() { return getToken(javaMinusMinus2Parser.RP, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public MainClassContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mainClass; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof javaMinusMinus2Listener ) ((javaMinusMinus2Listener)listener).enterMainClass(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof javaMinusMinus2Listener ) ((javaMinusMinus2Listener)listener).exitMainClass(this);
		}
	}

	public final MainClassContext mainClass() throws RecognitionException {
		MainClassContext _localctx = new MainClassContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_mainClass);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			match(T__3);
			setState(105);
			match(Identifier);
			setState(106);
			match(T__4);
			setState(107);
			match(T__5);
			setState(108);
			match(T__6);
			setState(109);
			match(T__7);
			setState(110);
			match(T__8);
			setState(111);
			match(LP);
			setState(112);
			match(T__9);
			setState(113);
			match(LSB);
			setState(114);
			match(RSB);
			setState(115);
			match(Identifier);
			setState(116);
			match(RP);
			setState(117);
			match(T__4);
			setState(121);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1152921508853318688L) != 0)) {
				{
				{
				setState(118);
				statement();
				}
				}
				setState(123);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(124);
			match(T__10);
			setState(125);
			match(T__10);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ClassDeclContext extends ParserRuleContext {
		public List<TerminalNode> Identifier() { return getTokens(javaMinusMinus2Parser.Identifier); }
		public TerminalNode Identifier(int i) {
			return getToken(javaMinusMinus2Parser.Identifier, i);
		}
		public List<FieldDeclContext> fieldDecl() {
			return getRuleContexts(FieldDeclContext.class);
		}
		public FieldDeclContext fieldDecl(int i) {
			return getRuleContext(FieldDeclContext.class,i);
		}
		public CtorDeclContext ctorDecl() {
			return getRuleContext(CtorDeclContext.class,0);
		}
		public List<MethodDeclContext> methodDecl() {
			return getRuleContexts(MethodDeclContext.class);
		}
		public MethodDeclContext methodDecl(int i) {
			return getRuleContext(MethodDeclContext.class,i);
		}
		public List<AbstractMethodDeclContext> abstractMethodDecl() {
			return getRuleContexts(AbstractMethodDeclContext.class);
		}
		public AbstractMethodDeclContext abstractMethodDecl(int i) {
			return getRuleContext(AbstractMethodDeclContext.class,i);
		}
		public ClassDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof javaMinusMinus2Listener ) ((javaMinusMinus2Listener)listener).enterClassDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof javaMinusMinus2Listener ) ((javaMinusMinus2Listener)listener).exitClassDecl(this);
		}
	}

	public final ClassDeclContext classDecl() throws RecognitionException {
		ClassDeclContext _localctx = new ClassDeclContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_classDecl);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__11) {
				{
				setState(127);
				match(T__11);
				}
			}

			setState(130);
			match(T__3);
			setState(131);
			match(Identifier);
			setState(143);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__12:
				{
				setState(132);
				match(T__12);
				setState(133);
				match(Identifier);
				}
				break;
			case T__13:
				{
				setState(134);
				match(T__13);
				setState(135);
				match(Identifier);
				setState(140);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__14) {
					{
					{
					setState(136);
					match(T__14);
					setState(137);
					match(Identifier);
					}
					}
					setState(142);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case T__4:
				break;
			default:
				break;
			}
			setState(145);
			match(T__4);
			setState(149);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(146);
					fieldDecl();
					}
					} 
				}
				setState(151);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			}
			setState(153);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				{
				setState(152);
				ctorDecl();
				}
				break;
			}
			setState(158);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(155);
					methodDecl();
					}
					} 
				}
				setState(160);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
			}
			setState(164);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 14815296L) != 0)) {
				{
				{
				setState(161);
				abstractMethodDecl();
				}
				}
				setState(166);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(167);
			match(T__10);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InterfaceDeclContext extends ParserRuleContext {
		public TerminalNode Identifier() { return getToken(javaMinusMinus2Parser.Identifier, 0); }
		public List<InterfaceFieldDeclContext> interfaceFieldDecl() {
			return getRuleContexts(InterfaceFieldDeclContext.class);
		}
		public InterfaceFieldDeclContext interfaceFieldDecl(int i) {
			return getRuleContext(InterfaceFieldDeclContext.class,i);
		}
		public List<InterfaceMethodDeclContext> interfaceMethodDecl() {
			return getRuleContexts(InterfaceMethodDeclContext.class);
		}
		public InterfaceMethodDeclContext interfaceMethodDecl(int i) {
			return getRuleContext(InterfaceMethodDeclContext.class,i);
		}
		public InterfaceDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_interfaceDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof javaMinusMinus2Listener ) ((javaMinusMinus2Listener)listener).enterInterfaceDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof javaMinusMinus2Listener ) ((javaMinusMinus2Listener)listener).exitInterfaceDecl(this);
		}
	}

	public final InterfaceDeclContext interfaceDecl() throws RecognitionException {
		InterfaceDeclContext _localctx = new InterfaceDeclContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_interfaceDecl);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(169);
			match(T__15);
			setState(170);
			match(Identifier);
			setState(171);
			match(T__4);
			setState(175);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(172);
					interfaceFieldDecl();
					}
					} 
				}
				setState(177);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
			}
			setState(181);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1152921504608683264L) != 0)) {
				{
				{
				setState(178);
				interfaceMethodDecl();
				}
				}
				setState(183);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(184);
			match(T__10);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InterfaceMethodDeclContext extends ParserRuleContext {
		public TerminalNode Identifier() { return getToken(javaMinusMinus2Parser.Identifier, 0); }
		public TerminalNode LP() { return getToken(javaMinusMinus2Parser.LP, 0); }
		public TerminalNode RP() { return getToken(javaMinusMinus2Parser.RP, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public ParameterListContext parameterList() {
			return getRuleContext(ParameterListContext.class,0);
		}
		public InterfaceMethodDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_interfaceMethodDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof javaMinusMinus2Listener ) ((javaMinusMinus2Listener)listener).enterInterfaceMethodDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof javaMinusMinus2Listener ) ((javaMinusMinus2Listener)listener).exitInterfaceMethodDecl(this);
		}
	}

	public final InterfaceMethodDeclContext interfaceMethodDecl() throws RecognitionException {
		InterfaceMethodDeclContext _localctx = new InterfaceMethodDeclContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_interfaceMethodDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(188);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__9:
			case T__17:
			case T__18:
			case T__19:
			case Identifier:
				{
				setState(186);
				type();
				}
				break;
			case T__7:
				{
				setState(187);
				match(T__7);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(190);
			match(Identifier);
			setState(191);
			match(LP);
			setState(193);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1152921504608683008L) != 0)) {
				{
				setState(192);
				parameterList();
				}
			}

			setState(195);
			match(RP);
			setState(196);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InterfaceFieldDeclContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode Identifier() { return getToken(javaMinusMinus2Parser.Identifier, 0); }
		public TerminalNode EQ() { return getToken(javaMinusMinus2Parser.EQ, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public InterfaceFieldDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_interfaceFieldDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof javaMinusMinus2Listener ) ((javaMinusMinus2Listener)listener).enterInterfaceFieldDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof javaMinusMinus2Listener ) ((javaMinusMinus2Listener)listener).exitInterfaceFieldDecl(this);
		}
	}

	public final InterfaceFieldDeclContext interfaceFieldDecl() throws RecognitionException {
		InterfaceFieldDeclContext _localctx = new InterfaceFieldDeclContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_interfaceFieldDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(198);
			type();
			setState(199);
			match(Identifier);
			setState(200);
			match(EQ);
			setState(201);
			expression();
			setState(202);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FieldDeclContext extends ParserRuleContext {
		public VarDeclContext varDecl() {
			return getRuleContext(VarDeclContext.class,0);
		}
		public FieldDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fieldDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof javaMinusMinus2Listener ) ((javaMinusMinus2Listener)listener).enterFieldDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof javaMinusMinus2Listener ) ((javaMinusMinus2Listener)listener).exitFieldDecl(this);
		}
	}

	public final FieldDeclContext fieldDecl() throws RecognitionException {
		FieldDeclContext _localctx = new FieldDeclContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_fieldDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(204);
			varDecl();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LocalDeclContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode Identifier() { return getToken(javaMinusMinus2Parser.Identifier, 0); }
		public TerminalNode EQ() { return getToken(javaMinusMinus2Parser.EQ, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public LocalDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_localDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof javaMinusMinus2Listener ) ((javaMinusMinus2Listener)listener).enterLocalDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof javaMinusMinus2Listener ) ((javaMinusMinus2Listener)listener).exitLocalDecl(this);
		}
	}
